Trying to fix issue with blurred focus

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ main {
 }
 
 .blurred-focus {
+  z-index: 1000;
   opacity: 0.9;
   background-color: var(--Medium-Gray);
 }
@@ -235,8 +236,9 @@ nav {
 
 .text-content p {
   margin: 1rem 1rem;
-  color: var(--Medium-Gray);
+  color: var(--Almost-Black);
   font-weight: var(--fw-500);
+  opacity: 0.7;
 }
 
 /* Button Center */
